[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Asteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SpaceShip.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 372.977, -29.2082, 0, 0, 0, 0, -22.5923, -30.9662, 0, 0, 0, 0, -33.1408, 498.218, 0, 0, 0, 0, 383.526, 501.734, 0, 0, 0, 0, 376.493, -30.9662 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
asteroid = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
zoom = Vector2( 3, 3 )

[node name="SpaceShip" parent="." instance=ExtResource( 3 )]

[node name="StartGame_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Asteroid" type="Node" parent="."]
editor/display_folded = true

[node name="Asteroid_Path" type="Path2D" parent="Asteroid"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Asteroid/Asteroid_Path"]
position = Vector2( 372.977, -29.2082 )
rotation = -3.13715

[node name="Asteroid_Container" type="Node" parent="Asteroid"]

[node name="Asteroid_Timer" type="Timer" parent="Asteroid"]
wait_time = 0.9

[connection signal="timeout" from="StartGame_Timer" to="." method="_on_StartGame_Timer_timeout"]
[connection signal="timeout" from="Asteroid/Asteroid_Timer" to="." method="_on_Asteroid_Timer_timeout"]
