[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/ScreenShake.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Spaceships/Player/Spaceship_w_Robots.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/Game_HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="PreventScroll" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 640.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_HUD" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 1 )]

[node name="Spaceship_w_Robots" parent="." instance=ExtResource( 2 )]
